# agentic-agent-src

./: .env.example  README.md  pyproject.toml
.claude/: settings.local.json
examples/: 01_basic_agent.py  02_tool_use.py  03_prompt_chaining.py  04_reflection.py  05_planning.py  06_multi_agent.py  07_rag_agent.py  08_full_pipeline.py
src/agentic/: __init__.py  agents.py  config.py  exceptions.py
src/agentic/a2a/: __init__.py  agent_card.py  protocol.py
src/agentic/core/: __init__.py  agent.py  context.py  events.py  message.py
src/agentic/evaluation/: __init__.py  evaluator.py  metrics.py
src/agentic/guardrails/: __init__.py  base.py  input_guard.py  output_guard.py
src/agentic/hitl/: __init__.py  checkpoint.py
src/agentic/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
src/agentic/mcp/: __init__.py  client.py  server.py
src/agentic/memory/: __init__.py  base.py  episodic.py  long_term.py  short_term.py
src/agentic/patterns/: __init__.py  base.py  multi_agent.py  parallelization.py  planning.py  prompt_chaining.py  reflection.py  routing.py
src/agentic/plugins/: __init__.py  base.py  manager.py
src/agentic/rag/: __init__.py  base.py  chunker.py  embedder.py  pipeline.py  retriever.py
src/agentic/reasoning/: __init__.py  base.py  chain_of_thought.py  react.py  tree_of_thought.py
src/agentic/tools/: __init__.py  base.py  registry.py
src/agentic/tools/builtin/: __init__.py  calculator.py  code_executor.py  search.py
tests/: conftest.py  test_agent.py  test_memory.py  test_patterns.py  test_tools.py
